# c1

./: .dockerignore  .gitignore  output.txt
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1
ai-robotics-mini-book/: package-lock.json  package.json  sidebars.ts
ai-robotics-mini-book/docs/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md
ai-robotics-mini-book/src/theme/: Root.tsx
backend/: pyproject.toml
backend2/: main.py  pyproject.toml
backend_rag/: book.txt  main2.py  pyproject.toml  rag9.py
book-rag/: ingest.py  ingest1.py  ingest2.py  ingest3.py  ingest4.py  ingest5.py  main.py  main2.py  main3.py  pyproject.toml  rag.py  rag1.py  rag3.py  rag5.py  rag6.py  rag9.py  requirements.txt
book-rag/local_qdrant_physical/: meta.json
book-rag/local_qdrant_physical/collection/physical_ai_book/: storage.sqlite
book-rag/local_qdrant_v2/: meta.json
book-rag/local_qdrant_v2/collection/book_rag/: storage.sqlite
history/adr/: 001-embedding-model-and-llm-provider-choice.md
history/prompts/001-constitution-principles/: 004-generate-tasks-for-chatbot-feature.plan.prompt.md  (+1 more)
rag-backend/: .env  ingest.py  main.py  requirements.txt
specs/001-constitution-principles/: plan.md  spec.md  tasks.md
specs/001-docusaurus-site/: plan.md  tasks.md
specs/002-docusaurus-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/data/: ingest.py
(+27 files in other folders)
